# redtea

./: Activation.h  CMakeLists.txt  CMakelist.txt  Loss.h  Optimizer.h  README.md  Tensor.h  TensorOps.h  def.h  test-log.cpp  test-lsl.cpp  test-softmax.cpp
src/: Activation.h  Layer.h  Loss.h  Optimizer.h  ShapeOps.h  Tensor.cpp  Tensor.h  TensorOps.h  test-layer.cpp  test-log.cpp  test-lsl.cpp  test-softmax.cpp  test-tanh.cpp
test/: logistic.txt  lstm.csv  test-lstm.cpp
